--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-react-devtools": "^4.2.15",
+    "mobx-react-router": "^4.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
