--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
+    "antd": "^3.1.6",
     "autoprefixer": "7.1.6",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -26,6 +27,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-app-rewired": "^1.4.0",
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
@@ -54,7 +56,8 @@
     "@types/jest": "^22.0.1",
     "@types/node": "^9.3.0",
     "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3"
+    "@types/react-dom": "^16.0.3",
+    "react-scripts": "^1.1.0"
   },
   "jest": {
     "collectCoverageFrom": [
