--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "autoprefixer": "7.1.6",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "core-decorators": "^0.20.0",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
+    "echarts": "^4.0.4",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
