--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-router-dom": "^4.2.3",
     "antd": "^3.1.6",
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "core-decorators": "^0.20.0",
